--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ace-ex/eslint-config": "^1.1.0",
-    "@dkshs/eslint-config": "^1.0.3",
-    "prettier": "^2.8.4"
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.35.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5"
   }
 }
