--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/react-dom": "18.0.11",
     "next": "13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@ace-ex/eslint-config": "^1.1.0",
