--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lint:fix": "eslint --fix && prettier -w ."
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.5",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "next": "13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ace-ex/eslint-config": "^1.1.0",
